assets/css/style.scss
---
---

@import "{{ site.theme }}";

$header-heading-color: white;
$header-bg-color: rgba(0,0,0,0.5);
$header-bg-color-secondary: rgba(255,255,255,0.5);

$section-headings-color: black;
$body-text-color: black !default;
$body-link-color: #C41E3A !default;
$blockquote-text-color: #999 !default;

$table-border-color: white !default;
$hr-border-color: #999 !default;

$code-text-color: black;

.logo-container {
  margin: auto;
  width: 25%;
  margin-top: 1.75rem;
}

.main-content {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-top: 2rem;
    margin-bottom: 1rem;
    font-weight: bold;
    color: $section-headings-color;
  }
  td, th {
    border: none!important;
  }
}

.page-header {
  color: $header-heading-color;
  // opacity: 0.6;
  text-align: center;
  background-color: $header-bg-color;
  // background-image: url('/assets/images/seoul/2021-03-02-6.jpg');
  background-image: url('/assets/images/seoul/2021-03-02-6.jpg');
  // background-image: url('/assets/images/banner.png');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;

  td, th {
    border: none!important;
  }

  // @include large {
  //   padding: 2.5rem 6rem;
  // }

  // @include medium {
  //   padding: 2.5rem 4rem;
  // }

  // @include small {
  //   padding: 2rem 1rem;
  // }
}

td {
  vertical-align: top;
}

abstract {
  font-size: 0.90rem;
}

